<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView android:id="@+id/btn_checklist"
        android:layout_width="0dp" android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/tb_checklist_cd"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_checklist" />

    <ImageView android:id="@+id/btn_style"
        android:layout_width="0dp" android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/tb_style_cd"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_color_dot" />

    <ImageView android:id="@+id/btn_image"
        android:layout_width="0dp" android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/tb_image_cd"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_image" />

    <ImageView android:id="@+id/btn_handwriting"
        android:layout_width="0dp" android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/tb_handwriting_cd"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_handwriting" />

</LinearLayout>
